[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
img-process = { path = "../img-process" }
alist-api = { path = "../alist-api" }
config = { path = "../config" }
cache = { path = "../cache" }
salvo = "0.68"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
time = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
